--- a/src/styles/components/media-container.scss
+++ b/src/styles/components/media-container.scss
@@ -6,7 +6,7 @@
     display: inline-flex;
     img {
       width: 100%;
-      visibility: hidden;
+      // visibility: hidden;
     }
   }
   small {
