--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -1,4 +1,86 @@
 @import '../util';
+
+body {
+  overflow: hidden;
+  &.loaded {
+    overflow-y: scroll;
+  }
+}
+
+.intro {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+  overflow: hidden;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    &.logo-white {
+      position: absolute;
+      top: 47%;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+      width: 280px;
+      height: auto;
+      z-index: 2;
+      transform: translateY(-50%) scale(3);
+    }
+  }
+}
+
+@keyframes zoomOutLogo {
+  0% {
+    transform: translateY(-50%) scale(3);
+    opacity: 1;
+  }
+  70% {
+    transform: translateY(-50%) scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(-50%) scale(1);
+    opacity: 0;
+  }
+}
+
+@keyframes zoomBackground {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.1);
+  }
+}
+
+.intro.play-anim {
+  animation: fadeOutIntro 0.3s ease 1.2s forwards;
+
+  img.logo-white {
+    animation: zoomOutLogo 1.2s ease forwards;
+  }
+
+  img:not(.logo-white) {
+    animation: zoomBackground 1.2s ease forwards;
+  }
+}
+
+@keyframes fadeOutIntro {
+  to {
+    opacity: 0;
+    pointer-events: none;
+  }
+}
+
+
 #main {
   position: relative;
 }
@@ -60,7 +142,7 @@ section {
   .media-container {
     max-width: 1080px;
     .media {
-      aspect-ratio: 1080 / 950;
+      // aspect-ratio: 1080 / 950;
     }
   }
 }
@@ -91,13 +173,13 @@ section {
       width: 59.2857143%;
       margin-right: var(--margin);
       .media {
-        aspect-ratio: 1 / 1;
+        // aspect-ratio: 1 / 1;
       }
     }
     &:nth-child(2) {
       width: 22.5714286%;
       .media {
-        aspect-ratio: 316 / 444;
+        // aspect-ratio: 316 / 444;
       }
     }
   }
@@ -107,17 +189,18 @@ section {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 110px;
   .media-container:first-child {
     width: 20%;
     .media {
-      aspect-ratio: 1 / 1;
+      // aspect-ratio: 1 / 1;
     }
   }
   .media-container:nth-child(2) {
     width: 61.8033989%;
     margin-top: var(--margin);
     .media {
-      aspect-ratio: 376 / 400;
+      ratio: 376 / 400;
     }
   }
 }
@@ -126,7 +209,7 @@ section {
   justify-content: center;
   text-align: center;
   ul {
-    font-family: $font-serif;
+    font-family: $font-sans;
     list-style: none;
     &:not(:last-child) {
       margin-right: 86px;
@@ -134,7 +217,11 @@ section {
   }
   li {
     will-change: transform, filter;
-    transition: transform 2.5s $in-out, filter 2s $in-out;
+    transition: transform 1.5s $in-out, filter 1.2s $in-out;
+    font-size: 24px;
+    span {
+      font-family: $font-serif;
+    }
     @for $i from 1 through 5 {
       &:nth-child(#{$i}) {
         transition-delay: #{$i * 0.2}s;
@@ -142,21 +229,49 @@ section {
     }
     &:not(.is-visible) {
       filter: blur(5px);
-      transform: scale(1.4) translateY(40px);
+      transform: scale(1.2) translateY(24px);
     }
   }
 }
+
+
 #section-4 {
   height: 100lvh;
   margin: 0;
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
   .media-container {
     width: 100%;
     max-width: 380px;
     .media {
-      aspect-ratio: 376 / 530;
+      // aspect-ratio: 376 / 530;
+      opacity: 0.1;
+      transform: scale(2)
+    }
+  }
+  .contact {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    text-align: center;
+    z-index: 1;
+    
+    * {
+      font-size: 5vw;
+      line-height: 1.2;
+      font-family: $font-serif;
+      mix-blend-mode: difference;
+    }
+
+    strong {
+      font-family: $font-sans;
+      font-weight: 600;
+      line-height: 0.9;
+      letter-spacing: -0.05em;
+      text-transform: uppercase;
     }
   }
 }
