--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -191,10 +191,17 @@ section {
   justify-content: center;
   gap: 110px;
   .media-container:first-child {
-    width: 20%;
+    width: 40%;
     .media {
       // aspect-ratio: 1 / 1;
     }
+  }
+  p {
+    font-size: 24px;
+    font-family: $font-serif;
+    text-transform: uppercase;
+    text-align: center;
+    max-width: 80%;
   }
   .media-container:nth-child(2) {
     width: 61.8033989%;
