--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -56,6 +56,17 @@ body {
       position: relative; 
       padding-left: 20px;
       list-style: none;
+      will-change: transform, filter;
+      transition: transform 0.5s $in-out, filter 1.2s $in-out;
+      @for $i from 1 through 5 {
+        &:nth-child(#{$i}) {
+          transition-delay: #{$i * 0.1}s;
+        }
+      }
+      &:not(.is-visible) {
+        filter: blur(5px);
+        transform: scale(1) translateY(24px);
+      }
       &:before {
         content: '';
         position: absolute;
@@ -264,19 +275,19 @@ section {
   }
   li {
     will-change: transform, filter;
-    transition: transform 1.5s $in-out, filter 1.2s $in-out;
+    transition: transform 0.5s $in-out, filter 1.2s $in-out;
     font-size: 24px;
     span {
       font-family: $font-serif;
     }
     @for $i from 1 through 5 {
       &:nth-child(#{$i}) {
-        transition-delay: #{$i * 0.2}s;
+        transition-delay: #{$i * 0.1}s;
       }
     }
     &:not(.is-visible) {
       filter: blur(5px);
-      transform: scale(1.2) translateY(24px);
+      transform: scale(1) translateY(24px);
     }
   }
 }
@@ -295,7 +306,7 @@ section {
     .media {
       // aspect-ratio: 376 / 530;
       opacity: 0.1;
-      transform: scale(2)
+      transform: scale(1.6);
     }
   }
   .contact {
